...
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="415dp"
        android:layout_height="552dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/newquestionSaveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
...
                android:id="@+id/radioButton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stord" />

            <Button
                android:id="@+id/newQuestionPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/velg_bilete" />

            <ImageView
                android:id="@+id/newQuestionImage"
...
