<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatasetActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:listitem="@layout/picture_item"/>


    <Button
        android:id="@+id/buttonLeggTilBilde"
        android:layout_width="122dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="594dp"
        android:layout_marginEnd="282dp"
        android:layout_marginRight="282dp"
        android:text="kamerarull"
        app:layout_constraintBottom_toBottomOf="@id/recycler_view"
        app:layout_constraintEnd_toEndOf="@id/recycler_view"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="@id/recycler_view"
        app:layout_constraintTop_toTopOf="@+id/recycler_view"
        app:layout_constraintVertical_bias="0.976" />
</RelativeLayout>