<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PlayActivity">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="566dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="81dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/playBackBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/playScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/score"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/playImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/kva_campus_er_dette"
            tools:srcCompat="@tools:sample/avatars" />

        <RadioGroup
            android:id="@+id/radioGroupPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/f_rde" />

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sogndal" />

            <RadioButton
                android:id="@+id/radioButton8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bergen" />

            <RadioButton
                android:id="@+id/radioButton9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stord" />

            <RadioButton
                android:id="@+id/radioButton10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/haugesund" />

            <RadioButton
                android:id="@+id/radioButton11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_42" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/playBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/attende"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>